--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -109,10 +109,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "41\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = \"4\"\n",
+    "print(type(msg))\n",
+    "\n",
+    "msg_1 = \"1\"\n",
+    "print(type(msg))\n",
+    "\n",
+    "print(msg+msg_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg =  4\n",
+    "print(type(msg))\n",
+    "\n",
+    "msg_1 = 1\n",
+    "print(type(msg))\n",
+    "\n",
+    "print(msg+msg_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = int(\"4\")\n",
+    "\n",
+    "print(type(msg))\n",
+    "\n",
+    "msg_1 = int(\"1\")\n",
+    "print(type(msg))\n",
+    "\n",
+    "print(msg+msg_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#cannot convert string to int\n",
+    "#msg = int(\"4D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "8.4\n",
+      "4\n",
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = 4.4\n",
+    "print(type(msg))\n",
+    "\n",
+    "print(4+msg)\n",
+    "\n",
+    "msg = 4\n",
+    "print(msg)\n",
+    "print(float(msg))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.2.1 Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3+4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4*3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3333333333333333"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(4/3,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3**4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 * (3+4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.2.2 String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "hello world\n",
+      "This 's easy to learn python\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = \"hello world\"\n",
+    "print(msg)\n",
+    "\n",
+    "msg = 'hello world'\n",
+    "print(msg)\n",
+    "\n",
+    "#print('This 's easy to learn python')\n",
+    "print(\"This 's easy to learn python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n",
+      "hello world\n",
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# addding string\n",
+    "\n",
+    "msg_1 = \"hello\"\n",
+    "msg_2 = \"world\"\n",
+    "\n",
+    "print(msg_1+msg_2)\n",
+    "print(msg_1+\" \"+msg_2)\n",
+    "print(f\"{msg_1} {msg_2}\") # f-string function"
+   ]
   }
  ],
  "metadata": {
