--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -1399,6 +1399,111 @@
     "exchange_rates.pop(\"AUDUSD\")\n",
     "exchange_rates"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.6.3 tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('EUR', 'GBP', 'AUD')\n",
+      "['EUR', 'GBP', 'AUD']\n",
+      "<class 'tuple'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "currencies = (\"EUR\",\"GBP\",\"AUD\")\n",
+    "currencies_list = [\"EUR\",\"GBP\",\"AUD\"]\n",
+    "\n",
+    "print(currencies)\n",
+    "print(currencies_list)\n",
+    "\n",
+    "print(type(currencies))\n",
+    "print(type(currencies_list))\n",
+    "\n",
+    "#currencies[0] = \"AAA\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.7 Control flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.7.1 If statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "i is between 5 and 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 6\n",
+    "print(i < 5)\n",
+    "\n",
+    "# if True :\n",
+    "#     print(\"True\") \n",
+    "    \n",
+    "if i<5:\n",
+    "    print(\"i is smaller than 5\")\n",
+    "elif i <= 10:\n",
+    "    print(\"i is between 5 and 10\")\n",
+    "else:\n",
+    "    print(\"out of range\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a important\n",
+      "This is an important\n"
+     ]
+    }
+   ],
+   "source": [
+    "# flag statement\n",
+    "is_important = True\n",
+    "if is_important:\n",
+    "    print(\"This is a important\")\n",
+    "else:\n",
+    "    print(\"This is not important\")\n",
+    "    \n",
+    "# 1 line if statement style    \n",
+    "print(\"This is an important\") if is_important else print(\"This is not important\")"
+   ]
   }
  ],
  "metadata": {
