--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -1504,6 +1504,345 @@
     "# 1 line if statement style    \n",
     "print(\"This is an important\") if is_important else print(\"This is not important\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.7.2 For Loops and While Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0 \n",
+    "while n <= 10 :\n",
+    "    print(n)\n",
+    "    n += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.7.3 For loops in data structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.7.3.1 for loops in lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USD', 'HKD', 'AUD']"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "currencies = [\"USD\",\"HKD\",\"AUD\"]\n",
+    "currencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USD\n",
+      "<class 'str'>\n",
+      "HKD\n",
+      "<class 'str'>\n",
+      "AUD\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#currencies[0]\n",
+    "\n",
+    "for currencie in currencies:\n",
+    "    print(currencie)\n",
+    "    print(type(currencie))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.7.3.2 for loops in dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EURUSD': 1.1152, 'GBPUSD': 1.2452, 'AUDUSD': 0.6161}"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exchage_rates = {\"EURUSD\": 1.1152 , \"GBPUSD\":1.2452,\"AUDUSD\":0.6161}\n",
+    "exchage_rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EURUSD\n",
+      "<class 'str'>\n",
+      "GBPUSD\n",
+      "<class 'str'>\n",
+      "AUDUSD\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exchage_rate in exchage_rates:\n",
+    "    print(exchage_rate)\n",
+    "    print(type(exchage_rate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EURUSD\n",
+      "<class 'str'>\n",
+      "GBPUSD\n",
+      "<class 'str'>\n",
+      "AUDUSD\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exchage_rate in exchage_rates.keys():\n",
+    "    print(exchage_rate)\n",
+    "    print(type(exchage_rate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1152\n",
+      "<class 'float'>\n",
+      "1.2452\n",
+      "<class 'float'>\n",
+      "0.6161\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exchage_rate in exchage_rates.values():\n",
+    "    print(exchage_rate)\n",
+    "    print(type(exchage_rate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('EURUSD', 1.1152)\n",
+      "<class 'tuple'>\n",
+      "('GBPUSD', 1.2452)\n",
+      "<class 'tuple'>\n",
+      "('AUDUSD', 0.6161)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exchage_rate in exchage_rates.items():\n",
+    "    print(exchage_rate)\n",
+    "    print(type(exchage_rate))"
+   ]
   }
  ],
  "metadata": {
