--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -1843,6 +1843,177 @@
     "    print(exchage_rate)\n",
     "    print(type(exchage_rate))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.8 Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "    \"\"\"for print hello world\"\"\"\n",
+    "    print(\"hello world\")\n",
+    "\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculation(input_1,input_2):\n",
+    "    \"\"\"plus 2 digit\"\"\"\n",
+    "    print(input_1+input_2)\n",
+    "    \n",
+    "print(calculation(2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculation(input_1,input_2):\n",
+    "    \"\"\"plus 2 digit\"\"\"\n",
+    "    return input_1+input_2\n",
+    "\n",
+    "print(calculation(2,3))\n",
+    "print(calculation(2,3)+10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 'ok')\n",
+      "15\n",
+      "ok\n",
+      "(5, 'ok')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculation(input_1,input_2):\n",
+    "    \"\"\"plus 2 digit\"\"\"\n",
+    "    result = input_1+input_2\n",
+    "    if result < 10:\n",
+    "        msg = \"ok\"\n",
+    "    else:\n",
+    "        msg = \"ng\"\n",
+    "    return result ,msg  \n",
+    "\n",
+    "print(calculation(2,3))\n",
+    "\n",
+    "print(calculation(2,3)[0]+10)\n",
+    "print(calculation(2,3)[1])\n",
+    "\n",
+    "print(calculation(3,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1, 'ok')\n",
+      "(1, 'ok')\n",
+      "(1, 'ok')\n",
+      "(1, 'ok')\n",
+      "(1, 'ok')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculation(input_1,input_2):\n",
+    "    \"\"\"minus 2 digit\"\"\"\n",
+    "    result = input_1-input_2\n",
+    "    if result < 10:\n",
+    "        msg = \"ok\"\n",
+    "    else:\n",
+    "        msg = \"ng\"\n",
+    "    return result ,msg  \n",
+    "print(calculation(2,3))\n",
+    "print(calculation(3,2))\n",
+    "\n",
+    "print(calculation(3,2))\n",
+    "print(calculation(input_1=3,input_2=2))\n",
+    "print(calculation(input_2=2,input_1=3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-7, 'ok')\n",
+      "(1, 'ok')\n",
+      "(1, 'ok')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculation(input_1,input_2=10):\n",
+    "    \"\"\"minus 2 digit\"\"\"\n",
+    "    result = input_1-input_2\n",
+    "    if result < 10:\n",
+    "        msg = \"ok\"\n",
+    "    else:\n",
+    "        msg = \"ng\"\n",
+    "    return result ,msg  \n",
+    "\n",
+    "print(calculation(3))\n",
+    "print(calculation(3,2))\n",
+    "print(calculation(input_2=2,input_1=3))"
+   ]
   }
  ],
  "metadata": {
