--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -2112,6 +2112,37 @@
     "print(minus(2,3))\n",
     "print(plus(2,3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.9.1 Example1\n",
+    "\n",
+    "convert to celsius\n",
+    "\n",
+    "-input ใส่ค่าอุณหภูมิ , fahrenhite,kelvin\n",
+    "- สูตรคำนวน (degrees-32)*(5/9) # fahrenhite\n",
+    "- สูตรคำนวน degrees -273.15 # kelvin\n",
+    "- ถ้าใส่ค่านอกเหนือจาก fahrenhite,kelvin โปรแกรมจะบอกว่า  ไม่รุ้จักค่านี้ให้ใส่ค่าใหม่\n",
+    "- ถ้าไม่ใส่หน่วยอุณหภูมิให้โปรแกรมคิดว่า fahrenhite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(convert_to_celsius(100))\n",
+    "print(convert_to_celsius(100,'kelvin'))\n",
+    "print(convert_to_celsius(100,'Kelvin'))\n",
+    "print(convert_to_celsius(100,'Fahrenhite'))\n",
+    "print(convert_to_celsius(100,'qwqe'))\n",
+    "print(convert_to_celsius('100','kelvin'))\n",
+    "print(convert_to_celsius('100.13','kelvin'))\n",
+    "print(convert_to_celsius('sdfsdf','kelvin'))"
+   ]
   }
  ],
  "metadata": {
