--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -2125,15 +2125,8 @@
     "- สูตรคำนวน (degrees-32)*(5/9) # fahrenhite\n",
     "- สูตรคำนวน degrees -273.15 # kelvin\n",
     "- ถ้าใส่ค่านอกเหนือจาก fahrenhite,kelvin โปรแกรมจะบอกว่า  ไม่รุ้จักค่านี้ให้ใส่ค่าใหม่\n",
-    "- ถ้าไม่ใส่หน่วยอุณหภูมิให้โปรแกรมคิดว่า fahrenhite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "- ถ้าไม่ใส่หน่วยอุณหภูมิให้โปรแกรมคิดว่า fahrenhite\n",
+    "\n",
     "print(convert_to_celsius(100))\n",
     "print(convert_to_celsius(100,'kelvin'))\n",
     "print(convert_to_celsius(100,'Kelvin'))\n",
@@ -2141,7 +2134,15 @@
     "print(convert_to_celsius(100,'qwqe'))\n",
     "print(convert_to_celsius('100','kelvin'))\n",
     "print(convert_to_celsius('100.13','kelvin'))\n",
-    "print(convert_to_celsius('sdfsdf','kelvin'))"
+    "print(convert_to_celsius('sdfsdf','kelvin'))\n",
+    "\n",
+    "37.78\n",
+    "-173.15\n",
+    "-173.15\n",
+    "37.78\n",
+    "Don't know source: qwqe\n",
+    "-173.15\n",
+    "-173.02"
    ]
   }
  ],
