--- a/src/01_basic_python.ipynb
+++ b/src/01_basic_python.ipynb
@@ -2158,6 +2158,50 @@
     "\n",
     "-173.02\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.78\n",
+      "-173.15\n",
+      "-173.15\n",
+      "37.78\n",
+      "Dont know source : qwqe\n",
+      "-173.15\n",
+      "-173.02\n",
+      "could not convert string to float: 'sdfsdf'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_to_celsius(degrees,source=\"fahrenhite\"):\n",
+    "    \"\"\"convert temperature\"\"\"\n",
+    "    try:\n",
+    "        if source.lower() == 'kelvin':\n",
+    "            return round(float(degrees) -273.15,2)\n",
+    "        elif source.lower() == 'fahrenhite':\n",
+    "            return round((float(degrees)-32)*(5/9),2)\n",
+    "        else:\n",
+    "            return f\"Dont know source : {source}\"\n",
+    "    except Exception as e:\n",
+    "        return e\n",
+    "        \n",
+    "\n",
+    "print(convert_to_celsius(100))\n",
+    "print(convert_to_celsius(100,'kelvin'))\n",
+    "print(convert_to_celsius(100,'Kelvin'))\n",
+    "print(convert_to_celsius(100,'Fahrenhite'))\n",
+    "print(convert_to_celsius(100,'qwqe'))\n",
+    "print(convert_to_celsius('100','kelvin'))\n",
+    "print(convert_to_celsius('100.13','kelvin'))\n",
+    "print(convert_to_celsius('sdfsdf','kelvin'))"
+   ]
   }
  ],
  "metadata": {
