--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -158,6 +158,29 @@
     "df = pd.DataFrame(data=datas,columns=columns)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.2.1 csv and excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv()"
+   ]
   }
  ],
  "metadata": {
