--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -4840,7 +4840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -8163,6 +8163,94 @@
    "source": [
     "pivot = pd.pivot_table(df,index=[\"year\",\"month\"],columns=\"store\",values=\"amount\",aggfunc=\"sum\",margins=True,margins_name=\"Total\")\n",
     "pivot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.10 Export data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.10.1 csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivot.to_csv(\"export/sales_amount_by_month_report.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.10.2 excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install xlwings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = xw.Book()\n",
+    "\n",
+    "app = xw.apps.active\n",
+    "sheet = template.sheets[\"Sheet1\"]\n",
+    "sheet[\"A1\"].value = \"Import data with xlwings\"\n",
+    "sheet[\"B2\"].value = \"Import data with xlwings at B2\"\n",
+    "sheet[\"A1\"].api.Font.Bold = True\n",
+    "sheet[\"A1\"].font.size = 15\n",
+    "sheet[\"A1\"].font.name = \"Arial\"\n",
+    "sheet[\"A1\"].color = (255,255,0)\n",
+    "sheet[\"A1\"].font.color = (255,0,0)\n",
+    "sheet[\"A4\"].value = pivot\n",
+    "\n",
+    "template.sheets.add(\"Sheet2\")\n",
+    "sheet_2 = template.sheets[\"Sheet2\"]\n",
+    "sheet_2[\"A1\"].value = \"Import data with xlwings At sheet2\"\n",
+    "\n",
+    "template.sheets.add(\"Sheet3\")\n",
+    "sheet_3 = template.sheets[\"Sheet3\"]\n",
+    "sheet_3[\"A1\"].value = \"Import data with xlwings At sheet3\"\n",
+    "\n",
+    "template.save(\"export\\sample_xlwings.xlsx\")\n",
+    "template.close() # close workbook\n",
+    "app.kill() # close app\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 1\n",
+    "excel sale amount report by daily 12 month "
    ]
   }
  ],
