--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -8252,6 +8252,131 @@
     "Example 1\n",
     "excel sale amount report by daily 12 month "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\April.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\August.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\December.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\February.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\January.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\July.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\June.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\March.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\May.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\November.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\October.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\September.xlsx']"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "path = os.getcwd()\n",
+    "path = path + r\"/data/sales_data\"\n",
+    "#print(path)\n",
+    "\n",
+    "xlxs_file_lists = []\n",
+    "file_extension = \".xlsx\"\n",
+    "\n",
+    "for root,dirs,files in os.walk(path):\n",
+    "    for name in files:\n",
+    "        if name.endswith(file_extension):\n",
+    "            file_path = os.path.join(root,name)\n",
+    "            #print(file_path)\n",
+    "            xlxs_file_lists.append(file_path)\n",
+    "xlxs_file_lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\December.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\November.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\October.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\September.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\August.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\July.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\June.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\May.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\April.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\March.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\February.xlsx',\n",
+       " 'c:\\\\Users\\\\nmb_m\\\\OneDrive\\\\Desktop\\\\python_office_2025_02_13\\\\src/data/sales_data\\\\2024\\\\January.xlsx']"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xlxs_file_list_sorts = []\n",
+    "\n",
+    "month_order = {\n",
+    "    'January': 1, 'February': 2, 'March': 3, 'April': 4, 'May': 5, 'June': 6,\n",
+    "    'July': 7, 'August': 8, 'September': 9, 'October': 10, 'November': 11, 'December': 12\n",
+    "}\n",
+    "def extract_month(file_path):\n",
+    "    month_name = file_path.split(\"\\\\\")[-1].split(\".\")[0] \n",
+    "    return month_order[month_name]\n",
+    "\n",
+    "sorted_file_paths = sorted(xlxs_file_lists, key=extract_month, reverse=True)\n",
+    "\n",
+    "for path in sorted_file_paths:\n",
+    "    #print(path)\n",
+    "    xlxs_file_list_sorts.append(path)\n",
+    "xlxs_file_list_sorts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = xw.Book()\n",
+    "app = xw.apps.active\n",
+    "sheet_1 = template.sheets[\"Sheet1\"]\n",
+    "\n",
+    "for file in xlxs_file_list_sorts:\n",
+    "    df = pd.read_excel(file)\n",
+    "    file_name = file.split(\"\\\\\")[-1].split(\".\")[0]\n",
+    "    df['date'] = pd.to_datetime(df['transaction_date'])\n",
+    "    df['month'] = df['date'].dt.month\n",
+    "    df['year'] = df['date'].dt.year\n",
+    "    df = df[df[\"year\"] == 2024]\n",
+    "    pivot = pd.pivot_table(df,index=\"transaction_date\",columns=\"store\",values=\"amount\",aggfunc=\"sum\",margins=True,margins_name=\"Total\")\n",
+    "    template.sheets.add(file_name)\n",
+    "    sheet = template.sheets[file_name]\n",
+    "    sheet[\"A1\"].value = f'SALE AMOUNT REPORT BY DAILY AT {file_name}'\n",
+    "    sheet[\"A1\"].api.Font.Bold = True\n",
+    "    sheet[\"A1\"].font.size = 15\n",
+    "    sheet[\"A1\"].font.name = \"Arial\"\n",
+    "    sheet[\"A1\"].font.color = (0,0,255)\n",
+    "    sheet[\"A3\"].value = pivot\n",
+    "\n",
+    "\n",
+    "sheet_1.delete()\n",
+    "template.save(\"export\\sale_amont_by_daily_12_month.xlsx\")\n",
+    "template.close() # close workbook\n",
+    "app.kill() # close app"
+   ]
   }
  ],
  "metadata": {
