--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -8346,7 +8346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8371,11 +8371,45 @@
     "    sheet[\"A1\"].font.color = (0,0,255)\n",
     "    sheet[\"A3\"].value = pivot\n",
     "\n",
-    "\n",
     "sheet_1.delete()\n",
     "template.save(\"export\\sale_amont_by_daily_12_month.xlsx\")\n",
     "template.close() # close workbook\n",
     "app.kill() # close app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "xlwings with template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "now = datetime.datetime.now()\n",
+    "formatted_time = now.strftime(\"%Y_%m_%d_%H_%M_%S\")\n",
+    "\n",
+    "\n",
+    "template = xw.Book(r\"data\\report_sale_templete.xlsx\")\n",
+    "app = xw.apps.active\n",
+    "sheet = template.sheets[\"Sheet1\"]\n",
+    "sheet[\"A1\"].value = pivot\n",
+    "\n",
+    "template.save(f\"export\\sale_amont_with_template_{formatted_time}.xlsx\")\n",
+    "template.close() # close workbook\n",
+    "app.kill() # close app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 2 : create module from example 1"
    ]
   }
  ],
