--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -8411,6 +8411,24 @@
    "source": [
     "Example 2 : create module from example 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from report_sale_amount import report_daily\n",
+    "\n",
+    "report_daily()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "export to script"
+   ]
   }
  ],
  "metadata": {
