--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -8429,6 +8429,80 @@
    "source": [
     "export to script"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#conda activate python_office && python main.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.12 Email"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import smtplib\n",
+    "from email.mime.multipart import MIMEMultipart\n",
+    "from email.mime.base import MIMEBase\n",
+    "from email import encoders\n",
+    "from email.mime.text import MIMEText\n",
+    "\n",
+    "from datetime import date \n",
+    "today = date.today()\n",
+    "\n",
+    "send_from = 'suraphop.b@minebea.co.th'\n",
+    "send_to = ['suraphop.b@minebea.co.th','devops.mic@gmail.com']\n",
+    "subject = f\"sale amount report on date {today}\"\n",
+    "text = f'''<html>\n",
+    "<head>\n",
+    "  Dear All\n",
+    "</head>\n",
+    "<body>\n",
+    "<div>\n",
+    "I would like to report sale amount summary by daily \n",
+    "</div>\n",
+    "<i> a attact file</i>\n",
+    "</body>\n",
+    "</html>\n",
+    "'''\n",
+    "\n",
+    "username = 'suraphop.b@minebea.co.th'\n",
+    "password = 'sss'\n",
+    "\n",
+    "msg = MIMEMultipart()\n",
+    "msg['Subject'] = subject\n",
+    "msg['From'] = send_from\n",
+    "msg['To'] = ', '.join(send_to)\n",
+    "msg.attach(MIMEText(text,'html'))\n",
+    "\n",
+    "server = smtplib.SMTP(\"smtp.gmail.com\",587)\n",
+    "server.ehlo()\n",
+    "server.starttls()\n",
+    "server.login(username,password)\n",
+    "server.sendmail(send_from,send_to,msg.as_string())"
+   ]
   }
  ],
  "metadata": {
