--- a/src/02_pandas.ipynb
+++ b/src/02_pandas.ipynb
@@ -8457,7 +8457,7 @@
        "{}"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8487,9 +8487,14 @@
     "</body>\n",
     "</html>\n",
     "'''\n",
+    "files = f\"export\\sale_amount_by_daily_12_month_2025_02_15_11_56_45.xlsx\"\n",
+    "file_name_1 = f\"sale_amount_2025_02_15_11_56_45.xlsx\"\n",
+    "\n",
+    "files_2 = f\"export\\sale_amont_with_template_2025_02_15_11_24_27.xlsx\"\n",
+    "file_name_2 = f\"sale_amont_with_template_2025_02_15_11_24_27.xlsx\"\n",
     "\n",
     "username = 'suraphop.b@minebea.co.th'\n",
-    "password = 'sss'\n",
+    "password = 'xxxxxx'\n",
     "\n",
     "msg = MIMEMultipart()\n",
     "msg['Subject'] = subject\n",
@@ -8497,11 +8502,37 @@
     "msg['To'] = ', '.join(send_to)\n",
     "msg.attach(MIMEText(text,'html'))\n",
     "\n",
+    "#add file\n",
+    "part = MIMEBase('application', \"octet-stream\")\n",
+    "with open(files, 'rb') as f:\n",
+    "    file = f.read()\n",
+    "part.set_payload(file)\n",
+    "encoders.encode_base64(part)    \n",
+    "part.add_header('Content-Disposition', f'attachment; filename=\"{file_name_1}\"')\n",
+    "msg.attach(part)\n",
+    "\n",
+    "part_2 = MIMEBase('application', \"octet-stream\")\n",
+    "with open(files_2, 'rb') as f:\n",
+    "    file = f.read()\n",
+    "part_2.set_payload(file)\n",
+    "encoders.encode_base64(part_2)    \n",
+    "part_2.add_header('Content-Disposition', f'attachment; filename=\"{file_name_2}\"')\n",
+    "msg.attach(part_2)\n",
+    "\n",
     "server = smtplib.SMTP(\"smtp.gmail.com\",587)\n",
     "server.ehlo()\n",
     "server.starttls()\n",
     "server.login(username,password)\n",
     "server.sendmail(send_from,send_to,msg.as_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "example\n",
+    "\n",
+    "- create report and send email with bat file"
    ]
   }
  ],
